--- a/currency-converter-api/.env
+++ b/currency-converter-api/.env
@@ -1,2 +1,2 @@
-API_PORT = "3000"
-EXCHANGE_KEY = "lgdSrpEUijeAqLmyJ1SKSAxCKzGUFAQi"
+# API_PORT = "3000" // USE DESIRED PORT
+# EXCHANGE_KEY = {USE API KEY FOR EXCHANGERATES_DATA API FROM API LAYER WEBSITE}
